--- a/Code/homepage_1/index.html
+++ b/Code/homepage_1/index.html
@@ -45,6 +45,13 @@
 				<a class="navbar-brand" href="/">
 					<img src="assets/img/logo-white-full.png" />
 				</a>
+				<div class="navbar-toggle">
+					<a class="toggle-btn" id="sidemenu_toggle">
+						<span></span>
+						<span></span>
+						<span></span>
+					</a>
+				</div>
 				<div class="navbar-links">
 					<ul class="side-nav-icons">
 						<li>
@@ -55,13 +62,6 @@
 						</li>
 						<li>
 							<a href="#"><i class="lab la-instagram"></i></a>
-						</li>
-						<li>
-							<a class="toggle-btn" id="sidemenu_toggle">
-								<span></span>
-								<span></span>
-								<span></span>
-							</a>
 						</li>
 					</ul>
 				</div>
