--- a/Code/homepage_2/index.html
+++ b/Code/homepage_2/index.html
@@ -125,7 +125,7 @@
                     Pour des villes plus agréables à vivre
                   </h1>
                   <p
-                    class="f-2 fs22 bold-1 op-08 mr-b-0 mr-t-5 animated s008"
+                    class="fs22 bold-1 op-08 mr-b-0 mr-t-5 animated s008"
                     data-animIn="fadeInUp|0.4"
                     data-animOut="fadeOutUp|0.4"
                     data-nc-md="fs22"
@@ -242,10 +242,10 @@
                   aria-controls="armaenv"
                 ></button>
                 <div class="img txt-primary">
-                  <span class="iconwrp"><i class="pe-7s-home"></i></span>
+                  <span class="iconwrp"><i class="pe-7s-global"></i></span>
                 </div>
                 <div class="info">
-                  <h3 class="title mini mr-b-0 bold-3 f-2">
+                  <h3 class="title mini mr-b-0 bold-3">
                     Arma environnement
                   </h3>
                 </div>
@@ -253,28 +253,28 @@
               <ul class="nc-navigation-children collapse" id="armaenv">
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Qui sommes-nous?</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Nos chiffres clés</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Notre mission</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Nos valeurs</a
                   >
@@ -294,44 +294,44 @@
                   aria-controls="nosforces"
                 ></button>
                 <div class="img txt-primary">
-                  <span class="iconwrp"><i class="pe-7s-home"></i></span>
+                  <span class="iconwrp"><i class="pe-7s-note2"></i></span>
                 </div>
                 <div class="info">
-                  <h3 class="title mini mr-b-0 bold-3 f-2">Nos forces</h3>
+                  <h3 class="title mini mr-b-0 bold-3">Nos forces</h3>
                 </div>
               </div>
               <ul class="nc-navigation-children collapse" id="nosforces">
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Equipe qualifiée et à l’écoute</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Organisation dédiée</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Innovation à la pointe des dernières technologies</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Digitalisation des process</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Gestion optimale des ressources</a
                   >
@@ -351,38 +351,38 @@
                   aria-controls="nossolutions"
                 ></button>
                 <div class="img txt-primary">
-                  <span class="iconwrp"><i class="pe-7s-home"></i></span>
+                  <span class="iconwrp"><i class="pe-7s-tools"></i></span>
                 </div>
                 <div class="info">
-                  <h3 class="title mini mr-b-0 bold-3 f-2">Nos solutions</h3>
+                  <h3 class="title mini mr-b-0 bold-3">Nos solutions</h3>
                 </div>
               </div>
               <ul class="nc-navigation-children collapse" id="nossolutions">
                 <h6>Pour les villes et collectivités</h6>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Propreté urbaine</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Gestion des déchets</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Espaces verts</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Eau & Assainissement</a
                   >
@@ -390,7 +390,7 @@
                 <h6>Pour les entreprises et industriels</h6>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Gestion des déchets</a
                   >
@@ -410,10 +410,10 @@
                   aria-controls="grandsprojets"
                 ></button>
                 <div class="img txt-primary">
-                  <span class="iconwrp"><i class="pe-7s-home"></i></span>
+                  <span class="iconwrp"><i class="pe-7s-albums"></i></span>
                 </div>
                 <div class="info">
-                  <h3 class="title mini mr-b-0 bold-3 f-2">
+                  <h3 class="title mini mr-b-0 bold-3">
                     Nos grands projets
                   </h3>
                 </div>
@@ -421,42 +421,42 @@
               <ul class="nc-navigation-children collapse" id="grandsprojets">
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Propreté et de la ville de Rabat</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Propreté de la ville de Marrakech</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Propreté de la ville de Casablanca</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Propreté de la ville d’Ifrane</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Propreté de la ville d’El Jadida</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Propreté de la ville de Kénitra</a
                   >
@@ -476,23 +476,23 @@
                   aria-controls="highlights"
                 ></button>
                 <div class="img txt-primary">
-                  <span class="iconwrp"><i class="pe-7s-home"></i></span>
+                  <span class="iconwrp"><i class="pe-7s-camera"></i></span>
                 </div>
                 <div class="info">
-                  <h3 class="title mini mr-b-0 bold-3 f-2">Nos highlights</h3>
+                  <h3 class="title mini mr-b-0 bold-3">Nos highlights</h3>
                 </div>
               </div>
               <ul class="nc-navigation-children collapse" id="highlights">
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Presse</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Médias</a
                   >
@@ -512,30 +512,30 @@
                   aria-controls="career"
                 ></button>
                 <div class="img txt-primary">
-                  <span class="iconwrp"><i class="pe-7s-home"></i></span>
+                  <span class="iconwrp"><i class="pe-7s-notebook"></i></span>
                 </div>
                 <div class="info">
-                  <h3 class="title mini mr-b-0 bold-3 f-2">Carrières</h3>
+                  <h3 class="title mini mr-b-0 bold-3">Carrières</h3>
                 </div>
               </div>
               <ul class="nc-navigation-children collapse" id="career">
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Notre politique RH</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Nos offres d’emploi</a
                   >
                 </li>
                 <li class="nc-navigation--li">
                   <a
-                    class="nc-navigation--link nc-pagelink title mini bold-2 f-2"
+                    class="nc-navigation--link nc-pagelink title mini bold-2"
                     href="#"
                     >Candidature spontanée</a
                   >
@@ -558,7 +558,7 @@
                   ></span>
                 </div>
                 <div class="info">
-                  <h3 class="title mini mr-b-0 bold-3 f-2">Contact</h3>
+                  <h3 class="title mini mr-b-0 bold-3">Contact</h3>
                 </div>
               </div>
             </li>
