Home Page 1 less Coming Soon

--- a/Code/homepage_1/index.html
+++ b/Code/homepage_1/index.html
@@ -46,7 +46,7 @@
 					<img src="assets/img/logo-white-full.png" />
 				</a>
 				<div class="navbar-toggle">
-					<a class="toggle-btn" id="sidemenu_toggle">
+					<a class="side-menu-toggle  toggle-btn" id="sidemenu_toggle">
 						<span></span>
 						<span></span>
 						<span></span>
@@ -159,7 +159,7 @@
 	</li>
 	
 	<li class="nav-item">
-		<a class="nav-link scroll" href="assets/contact-us.html"
+		<a class="nav-link scroll" href="#"
 		>Contact</a
 		>
 	</li>
@@ -181,12 +181,18 @@
 	<div class="overlay-inner bg-primary"></div>
 </div>
 <div class="content-area">
+	<div class="logo">
+		<img src="assets/img/logo-light.png" alt="ARMA Environnement">
+	</div>
 	<div class="row no-gutters">
 		<div class="col-12">
 			<div class="home-banner" id="home-banner">
 				<div class="home-banner-wrap">
-					<img src="assets/img/logo-light.png" alt="ARMA Environnement">
-					<h1>Pour des villes plus agréables à vivre</h1>
+					<div class="container">
+						<h1>Pour des villes plus agréables à vivre</h1>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+						<a href="#" class="side-menu-toggle btn blue-btn">Découvrir</a>
+					</div>
 				</div>
 			</div>
 		</div>
