--- a/Code/homepage_2/index.html
+++ b/Code/homepage_2/index.html
@@ -35,7 +35,7 @@
     <!-- TEMPLATE -->
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/nc-grids.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/main.css?v3" />
     <link rel="stylesheet" href="css/helper.css" />
     <link rel="stylesheet" href="css/responsive.css" />
 
