--- a/website/index.html
+++ b/website/index.html
@@ -62,7 +62,7 @@
                         </li>
                         <li>
                             <a href="https://www.youtube.com/channel/UCDqLS0GwYEsIj_rx02upnzg" target="_blank"><i
-                                    class="lab la-youtube"></i></a>
+                                    class="fab fa-youtube"></i></a>
                         </li>
                     </ul>
                 </div>
