--- a/website/index.html
+++ b/website/index.html
@@ -57,6 +57,12 @@
                                     class="lab la-facebook-f"></i></a>
                         </li>
                         <li>
+                            <a href="#" target="_blank"><i class="lab la-instagram"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank"><i class="lab la-twitter"></i></a>
+                        </li>
+                        <li>
                             <a href="https://www.linkedin.com/company/arma-environnement/" target="_blank"><i
                                     class="lab la-linkedin-in"></i></a>
                         </li>
