--- a/website/index.html
+++ b/website/index.html
@@ -93,7 +93,7 @@
                     <nav class="side-nav-menu w-100">
                         <ul class="navbar-nav">
                             <li class="nav-item menu-parent">
-                                <button class="nav-link scroll">Arma environnement</button>
+                                <button class="nav-link title scroll">Arma environnement</button>
 
                                 <ul class="menu-children">
                                     <li class="nav-item"><a class="nav-link menu-child" href="#">Qui sommes-nous?</a>
@@ -105,7 +105,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item menu-parent">
-                                <button class="nav-link scroll">Nos forces</button>
+                                <button class="nav-link title scroll">Nos forces</button>
 
                                 <ul class="menu-children">
                                     <li class="nav-item"><a class="nav-link menu-child" href="#">Equipe qualifiée et à
@@ -121,10 +121,10 @@
                                 </ul>
                             </li>
                             <li class="nav-item menu-parent">
-                                <button class="nav-link scroll">Nos solutions</button>
+                                <button class="nav-link title scroll">Nos solutions</button>
 
                                 <ul class="menu-children">
-                                    <h6>Pour les villes et collectivités</h6>
+                                    <h6><span>Pour les villes et collectivités</span></h6>
                                     <li class="nav-item"><a class="nav-link menu-child" href="#">Propreté urbaine</a>
                                     </li>
                                     <li class="nav-item"><a class="nav-link menu-child" href="#">Gestion des déchets</a>
@@ -133,13 +133,13 @@
                                     <li class="nav-item"><a class="nav-link menu-child" href="#">Eau &
                                             Assainissement</a>
                                     </li>
-                                    <h6>Pour les entreprises et industriels</h6>
+                                    <h6><span>Pour les entreprises et industriels</span></h6>
                                     <li class="nav-item"><a class="nav-link menu-child" href="#">Gestion des déchets</a>
                                     </li>
                                 </ul>
                             </li>
                             <li class="nav-item menu-parent">
-                                <button class="nav-link scroll">Nos grands projets</button>
+                                <button class="nav-link title scroll">Nos grands projets</button>
 
                                 <ul class="menu-children">
                                     <li class="nav-item"><a class="nav-link menu-child" href="#">Propreté et de la ville
@@ -159,7 +159,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item menu-parent">
-                                <button class="nav-link scroll">Nos highlights</button>
+                                <button class="nav-link title scroll">Nos highlights</button>
 
                                 <ul class="menu-children">
                                     <li class="nav-item"><a class="nav-link menu-child" href="#">Presse</a></li>
@@ -168,7 +168,7 @@
                             </li>
 
                             <li class="nav-item menu-parent">
-                                <button class="nav-link scroll">Carrières</button>
+                                <button class="nav-link title scroll">Carrières</button>
 
                                 <ul class="menu-children">
                                     <li class="nav-item"><a class="nav-link menu-child" href="#">Notre politique RH</a>
@@ -182,7 +182,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link scroll" href="#">Contact</a>
+                                <a class="nav-link title scroll" href="#">Contact</a>
                             </li>
                         </ul>
                     </nav>
@@ -190,12 +190,12 @@
                     <div class="side-footer w-100">
                         <p class="rites">
                             &copy; 2020 ARMA Environnement <br>
-                            Groupe ARMA Holding - Tous droits réservés
+                            Groupe ARMA Holding - Tous droits résérvés
                         </p>
                         <p class="rites">
                             <b>Tel.</b> +212 (0) 5 37 63 55 56 <br>
                             <b>Mail.</b> <a href="mailto:contact@arma.ma">contact@arma.ma</a> <br>
-                            <b>Address.</b> Avenue Mehdi Ben Barka, Lot Soumia,<br>Lot N°5 Souissi-Rabat
+                            <b>Address.</b> Avenue Mehdi Ben Barka <br>Lot Soumia, Lot N°5 Souissi, Rabat - Maroc
                         </p>
                     </div>
                 </div>
