--- a/website/index.html
+++ b/website/index.html
@@ -19,6 +19,7 @@
     <link href="vendor/css/bundle.min.css" rel="stylesheet" />
     <!-- Plugin Css -->
     <link href="assets/css/line-awesome.min.css" rel="stylesheet" />
+    <link href="vendor/css/slick.css" rel="stylesheet" />
     <!-- Style Sheet -->
     <link href="assets/css/style.css?v=3" rel="stylesheet" />
 </head>
@@ -227,12 +228,28 @@
                         </div>
                     </div>
                 </div>
+                <div class="footer-news">
+                    <h4 class="news-heading">Arma News:</h4>
+                    <ul class="arma-news" id="arma-news">
+                        <li><a href="#">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a>
+                        </li>
+                        <li><a href="#">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a>
+                        </li>
+                        <li><a href="#">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a>
+                        </li>
+                        <li><a href="#">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a>
+                        </li>
+                        <li><a href="#">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
 
     <!-- JavaScript -->
     <script src="vendor/js/bundle.min.js"></script>
+    <script src="vendor/js/slick.min.js"></script>
     <!-- custom script-->
     <script src="assets/js/script.js"></script>
 </body>
