--- a/website/index.html
+++ b/website/index.html
@@ -97,7 +97,8 @@
                                 <button class="nav-link title scroll">Arma environnement</button>
 
                                 <ul class="menu-children">
-                                    <li class="nav-item"><a class="nav-link menu-child" href="#">Qui sommes-nous?</a>
+                                    <li class="nav-item"><a class="nav-link menu-child" href="about.html">Qui
+                                            sommes-nous?</a>
                                     </li>
                                     <li class="nav-item"><a class="nav-link menu-child" href="#">Nos chiffres clés</a>
                                     </li>
@@ -201,48 +202,51 @@
                     </div>
                 </div>
             </div>
-            <div class="overlay">
-                <div class="overlay-inner" style="background-image: url(assets/img/casablanca.jpg);">
-                    <img src="assets/img/casablanca.jpg" alt="background" style="display: none;">
+            <div id="page-wrapper">
+                <div class="overlay">
+                    <div class="overlay-inner" style="background-image: url(assets/img/casablanca.jpg);">
+                        <img src="assets/img/casablanca.jpg" alt="background" style="display: none;">
+                    </div>
+                    <div class="overlay-inner bg-primary"></div>
                 </div>
-                <div class="overlay-inner bg-primary"></div>
-            </div>
-            <div class="content-area">
-                <div class="logo">
-                    <img src="assets/img/logo-light.png" alt="ARMA Environnement">
-                </div>
-                <div class="row no-gutters">
-                    <div class="col-12">
-                        <div class="home-banner" id="home-banner">
-                            <div class="home-banner-wrap">
-                                <div class="container">
-                                    <h1>Pour des villes plus agréables à vivre</h1>
-                                    <p class="sub col-md-8 offset-md-2">Lorem ipsum dolor sit amet, consectetur
-                                        adipiscing
-                                        elit,
-                                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                                        minim
-                                        veniam.</p>
-                                    <a href="#" class="side-menu-toggle btn blue-btn"><b>Découvrir</b></a>
+                <div class="content-area">
+                    <div class="logo">
+                        <img src="assets/img/logo-light.png" alt="ARMA Environnement">
+                    </div>
+                    <div class="page row no-gutters">
+                        <div class="col-12">
+                            <div class="home-banner" id="home-banner">
+                                <div class="home-banner-wrap">
+                                    <div class="container">
+                                        <h1>Pour des villes plus agréables à vivre</h1>
+                                        <p class="sub col-md-8 offset-md-2">Lorem ipsum dolor sit amet, consectetur
+                                            adipiscing
+                                            elit,
+                                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                                            ad
+                                            minim
+                                            veniam.</p>
+                                        <a href="#" class="side-menu-toggle btn blue-btn"><b>Découvrir</b></a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="footer-news">
-                    <h5 class="news-heading"><b>Arma</b><br />News</h5>
-                    <ul class="arma-news" id="arma-news">
-                        <li><a href="#">1. Lorem Ipsum is simply dummy text of the printing and typesetting.</a>
-                        </li>
-                        <li><a href="#">2. Lorem Ipsum is simply dummy text of the printing and typesetting.</a>
-                        </li>
-                        <li><a href="#">3. Lorem Ipsum is simply dummy text of the printing and typesetting.</a>
-                        </li>
-                        <li><a href="#">4. Lorem Ipsum is simply dummy text of the printing and typesetting.</a>
-                        </li>
-                        <li><a href="#">Lorem Ipsum is simply dummy text of the printing and typesetting.</a>
-                        </li>
-                    </ul>
+                    <div class="footer-news">
+                        <h5 class="news-heading"><b>Arma</b><br />News</h5>
+                        <ul class="arma-news" id="arma-news">
+                            <li><a href="#">1. Lorem Ipsum is simply dummy text of the printing and typesetting.</a>
+                            </li>
+                            <li><a href="#">2. Lorem Ipsum is simply dummy text of the printing and typesetting.</a>
+                            </li>
+                            <li><a href="#">3. Lorem Ipsum is simply dummy text of the printing and typesetting.</a>
+                            </li>
+                            <li><a href="#">4. Lorem Ipsum is simply dummy text of the printing and typesetting.</a>
+                            </li>
+                            <li><a href="#">Lorem Ipsum is simply dummy text of the printing and typesetting.</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
