--- a/website/index.html
+++ b/website/index.html
@@ -211,9 +211,9 @@
                 </div>
                 <div class="content-area">
                     <div class="logo">
-                        <img src="assets/img/logo-light.png" alt="ARMA Environnement">
+                        <a href="index.html"><img src="assets/img/logo-light.png" alt="ARMA Environnement"></a>
                     </div>
-                    <div class="page row no-gutters">
+                    <div class="row no-gutters">
                         <div class="col-12">
                             <div class="home-banner" id="home-banner">
                                 <div class="home-banner-wrap">
