--- a/website/index.html
+++ b/website/index.html
@@ -41,9 +41,9 @@
     <div class="main">
         <div class="row no-gutters">
             <div class="side-nav">
-                <!-- <a class="navbar-brand" href="/">
+                <a class="navbar-brand" href="/">
                     <img src="assets/img/logo-white-full.png" alt="" />
-                </a> -->
+                </a>
                 <div class="navbar-toggle">
                     <a class="side-menu-toggle toggle-btn" id="sidemenu_toggle">
                         <span></span>
@@ -218,7 +218,7 @@
                             <div class="home-banner" id="home-banner">
                                 <div class="home-banner-wrap">
                                     <div class="container">
-                                        <h1>Pour des villes plus agréables à vivre</h1>
+                                        <h1>Engagés pour l’avenir de nos villes</h1>
                                         <p class="sub col-md-8 offset-md-2">Lorem ipsum dolor sit amet, consectetur
                                             adipiscing
                                             elit,
@@ -226,7 +226,7 @@
                                             ad
                                             minim
                                             veniam.</p>
-                                        <a href="#" class="side-menu-toggle btn blue-btn"><b>Découvrir</b></a>
+                                        <a href="#" class="side-menu-toggle btn blue-btn">Découvrir</a>
                                     </div>
                                 </div>
                             </div>
