New sidenav logo

--- a/website/about.html
+++ b/website/about.html
@@ -30,9 +30,9 @@
     <div class="main">
         <div class="row no-gutters">
             <div class="side-nav">
-                <!-- <a class="navbar-brand" href="/">
-                    <img src="assets/img/logo-white-full.png" alt="" />
-                </a> -->
+                <a class="navbar-brand" href="/">
+                    <img src="assets/img/logo-white-2.png" alt="" />
+                </a>
                 <div class="navbar-toggle">
                     <a class="side-menu-toggle toggle-btn" id="sidemenu_toggle">
                         <span></span>
