New inner pages designs

--- a/website/about.html
+++ b/website/about.html
@@ -12,7 +12,7 @@
     <!-- keywords -->
     <meta name="keywords" content="" />
     <!-- Page Title -->
-    <title>ARMA Environnement | Pour des villes plus agréables à vivre</title>
+    <title>Qui sommes-nous? | ARMA Environnement</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/img/favicon.ico?v=2" />
     <!-- Bundle -->
@@ -30,7 +30,7 @@
     <div class="main">
         <div class="row no-gutters">
             <div class="side-nav">
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand" href="index.html">
                     <img src="assets/img/logo-white-2.png" alt="" />
                 </a>
                 <div class="navbar-toggle">
@@ -153,7 +153,7 @@
                                 <button class="nav-link title scroll">Nos highlights</button>
 
                                 <ul class="menu-children">
-                                    <li class="nav-item"><a class="nav-link menu-child" href="#">Presse</a></li>
+                                    <li class="nav-item"><a class="nav-link menu-child" href="presse.html">Presse</a></li>
                                     <li class="nav-item"><a class="nav-link menu-child" href="#">Médias</a></li>
                                 </ul>
                             </li>
