--- a/website/presse-custom.html
+++ b/website/presse-custom.html
@@ -12,7 +12,7 @@
     <!-- keywords -->
     <meta name="keywords" content="" />
     <!-- Page Title -->
-    <title>ARMA Environnement | Engagés pour l’avenir de nos villes</title>
+    <title>Presse | ARMA Environnement</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/img/favicon.ico?v=2" />
     <!-- Bundle -->
@@ -25,17 +25,6 @@
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="90">
-    <!-- Preloader -->
-    <!--START PAGE LOADER-->
-    <div id="loader">
-        <div class="loader center-block">
-            <div class="inner one"></div>
-            <div class="inner two"></div>
-            <div class="inner three"></div>
-        </div>
-    </div>
-    <!--END PAGE LOADER-->
-    <!-- Preloader End -->
 
     <!--map sec-->
     <div class="main">
@@ -204,48 +193,111 @@
             </div>
             <div id="page-wrapper">
                 <div class="overlay">
-                    <div class="overlay-inner" style="background-image: url(assets/img/casablanca.jpg);">
-                        <img src="assets/img/casablanca.jpg" alt="background" style="display: none;">
+                    <div class="overlay-inner" style="background-image: url(assets/img/overlays/1.jpg);">
+                        <img src="assets/img/overlays/1.jpg" alt="background" style="display: none;">
                     </div>
-                    <div class="overlay-inner bg-primary"></div>
+                    <div class="overlay-inner bg-secondary"></div>
                 </div>
                 <div class="content-area">
                     <div class="logo">
                         <a href="index.html"><img src="assets/img/logo-light.png" alt="ARMA Environnement"></a>
                     </div>
-                    <div class="row no-gutters">
-                        <div class="col-12">
-                            <div class="home-banner" id="home-banner">
-                                <div class="home-banner-wrap">
-                                    <div class="container">
-                                        <h1>Engagés pour l’avenir de nos villes</h1>
-                                        <p class="sub col-md-8 offset-md-2">Lorem ipsum dolor sit amet, consectetur
-                                            adipiscing
-                                            elit,
-                                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                                            ad
-                                            minim
-                                            veniam.</p>
-                                        <a href="#" class="side-menu-toggle btn blue-btn">Découvrir</a>
+                    <div class="page row no-gutters">
+                        <div class="col-md-8 offset-md-1">
+                            <nav aria-label="breadcrumb">
+                                <ol class="breadcrumb">
+                                    <li class="breadcrumb-item"><a href="index.html">Arma Environnement</a></li>
+                                    <li class="breadcrumb-item active" aria-current="page">Presse</li>
+                                </ol>
+                            </nav>
+                            <h1 class="page-title">Lorem ipsum dolor sit amet</h1>
+
+                            <div class="grid-layout content-wrapper">
+                                <div class="card-deck large-left mb-4">
+                                    <div class="card">
+                                        <a href="#"><img class="card-img-top" src="assets/img/blogs/1.jpg" alt="Card image cap"></a>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Lorem ipsum</h5>
+                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        </div>
+                                        <div class="card-footer">
+                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <a href="#"><img class="card-img-top" src="assets/img/blogs/1.jpg" alt="Card image cap"></a>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Lorem ipsum</h5>
+                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        </div>
+                                        <div class="card-footer">
+                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card-deck large-right mb-4">
+                                    <div class="card">
+                                        <a href="#"><img class="card-img-top" src="assets/img/blogs/1.jpg" alt="Card image cap"></a>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Lorem ipsum</h5>
+                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        </div>
+                                        <div class="card-footer">
+                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <a href="#"><img class="card-img-top" src="assets/img/blogs/1.jpg" alt="Card image cap"></a>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Lorem ipsum</h5>
+                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        </div>
+                                        <div class="card-footer">
+                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card-deck mb-4">
+                                    <div class="card">
+                                        <a href="#"><img class="card-img-top" src="assets/img/blogs/1.jpg" alt="Card image cap"></a>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Lorem ipsum</h5>
+                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        </div>
+                                        <div class="card-footer">
+                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <a href="#"><img class="card-img-top" src="assets/img/blogs/1.jpg" alt="Card image cap"></a>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Lorem ipsum</h5>
+                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        </div>
+                                        <div class="card-footer">
+                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <a href="#"><img class="card-img-top" src="assets/img/blogs/1.jpg" alt="Card image cap"></a>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Lorem ipsum</h5>
+                                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        </div>
+                                        <div class="card-footer">
+                                            <a href="#" class="btn blue-btn">Lire plus</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="footer-news">
-                        <h5 class="news-heading"><b>Arma</b><br />News</h5>
-                        <ul class="arma-news" id="arma-news">
-                            <li><a href="#">1. Lorem Ipsum is simply dummy text of the printing and typesetting.</a>
-                            </li>
-                            <li><a href="#">2. Lorem Ipsum is simply dummy text of the printing and typesetting.</a>
-                            </li>
-                            <li><a href="#">3. Lorem Ipsum is simply dummy text of the printing and typesetting.</a>
-                            </li>
-                            <li><a href="#">4. Lorem Ipsum is simply dummy text of the printing and typesetting.</a>
-                            </li>
-                            <li><a href="#">Lorem Ipsum is simply dummy text of the printing and typesetting.</a>
-                            </li>
-                        </ul>
                     </div>
                 </div>
             </div>
